--- a/Federal Taphouse/Base.lproj/Main.storyboard
+++ b/Federal Taphouse/Base.lproj/Main.storyboard
@@ -304,6 +304,34 @@
             </objects>
             <point key="canvasLocation" x="1211" y="-296"/>
         </scene>
+        <!--Beer-->
+        <scene sceneID="dTd-bV-gMa">
+            <objects>
+                <tableViewController id="HYy-rb-wMU" customClass="Beer" customModule="Federal_Taphouse" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="b6s-4R-BqU">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="dj8-Vg-7nX">
+                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dj8-Vg-7nX" id="h7V-WH-Amf">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="HYy-rb-wMU" id="piz-Qm-HcH"/>
+                            <outlet property="delegate" destination="HYy-rb-wMU" id="UEm-VI-k4g"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sxu-lF-zHN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2093" y="-1013"/>
+        </scene>
         <!--Instagram-->
         <scene sceneID="okO-Nf-sgR">
             <objects>
@@ -346,16 +374,30 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Food &amp; Drinks Menu" id="VEc-js-A8d">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Food Menu" id="VEc-js-A8d">
                                 <rect key="frame" x="0.0" y="28" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="VEc-js-A8d" id="YX5-gh-2dd">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="0j9-5W-bHm" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="RCV-tf-3qN"/>
+                                </connections>
+                            </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Beer List" id="udi-Ly-ofN">
+                                <rect key="frame" x="0.0" y="72" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="udi-Ly-ofN" id="cJd-hO-VIs">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="HYy-rb-wMU" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="mC5-TT-hRK"/>
+                                </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Invite Friends" id="BgA-9o-yUO">
-                                <rect key="frame" x="0.0" y="72" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="116" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="BgA-9o-yUO" id="Vbt-Nd-Scy">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
@@ -366,7 +408,7 @@
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Deals For You!" id="hie-KF-nqp">
-                                <rect key="frame" x="0.0" y="116" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="160" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hie-KF-nqp" id="spq-gj-ttv">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
@@ -377,7 +419,7 @@
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Find Us" id="wdU-3Z-OCq">
-                                <rect key="frame" x="0.0" y="160" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="204" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wdU-3Z-OCq" id="bXf-W1-Bsx">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
@@ -388,7 +430,7 @@
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Contact Us" id="kaI-Zc-91u">
-                                <rect key="frame" x="0.0" y="204" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="248" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kaI-Zc-91u" id="Fox-bJ-Ce1">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
@@ -399,7 +441,7 @@
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Facebook" id="G2c-7s-Rnf">
-                                <rect key="frame" x="0.0" y="248" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="292" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="G2c-7s-Rnf" id="7f3-ti-H5p">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
@@ -410,7 +452,7 @@
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Twitter" id="muI-cQ-2LS">
-                                <rect key="frame" x="0.0" y="292" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="336" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="muI-cQ-2LS" id="sQu-mJ-eZd">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
@@ -421,7 +463,7 @@
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Instagram" id="HzS-aD-3aO">
-                                <rect key="frame" x="0.0" y="336" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="380" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="HzS-aD-3aO" id="XBR-H4-KVX">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
@@ -432,7 +474,7 @@
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Logout" id="umS-8M-yDc">
-                                <rect key="frame" x="0.0" y="380" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="424" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="umS-8M-yDc" id="l8q-pu-1UY">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
@@ -452,7 +494,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9wZ-RI-5v4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1817" y="377"/>
+            <point key="canvasLocation" x="1808" y="401"/>
         </scene>
         <!--Menu-->
         <scene sceneID="g4J-2l-0Ad">
@@ -464,7 +506,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="Pds-Gb-acK" style="IBUITableViewCellStyleDefault" id="NP3-4T-Oet">
-                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NP3-4T-Oet" id="CPd-Oq-naG">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
@@ -504,6 +546,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fed.png" translatesAutoresizingMaskIntoConstraints="NO" id="lKU-dq-3ng">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone Number" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="kVR-Jr-4aP">
                                 <rect key="frame" x="20" y="204" width="560" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -525,10 +570,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="lKU-dq-3ng" firstAttribute="bottom" secondItem="0fA-ye-6Yl" secondAttribute="top" id="4Ib-6Q-dD2"/>
                             <constraint firstItem="kVR-Jr-4aP" firstAttribute="trailing" secondItem="Sn0-9y-tQ4" secondAttribute="trailingMargin" id="4aa-az-tP7"/>
+                            <constraint firstItem="lKU-dq-3ng" firstAttribute="top" secondItem="Sn0-9y-tQ4" secondAttribute="top" id="7Kl-Lu-Xjf"/>
                             <constraint firstItem="kVR-Jr-4aP" firstAttribute="top" secondItem="0Cj-30-RvE" secondAttribute="bottom" constant="184" id="8oP-Br-Rup"/>
                             <constraint firstItem="kVR-Jr-4aP" firstAttribute="centerX" secondItem="cK3-dK-XlM" secondAttribute="centerX" id="hWZ-tt-ymS"/>
+                            <constraint firstItem="lKU-dq-3ng" firstAttribute="leading" secondItem="Sn0-9y-tQ4" secondAttribute="leading" id="jOT-l2-z4i"/>
                             <constraint firstItem="kVR-Jr-4aP" firstAttribute="leading" secondItem="Sn0-9y-tQ4" secondAttribute="leadingMargin" id="meJ-FG-pFg"/>
+                            <constraint firstItem="lKU-dq-3ng" firstAttribute="centerX" secondItem="cK3-dK-XlM" secondAttribute="centerX" id="tb9-7A-Otz"/>
                             <constraint firstItem="cK3-dK-XlM" firstAttribute="top" secondItem="kVR-Jr-4aP" secondAttribute="bottom" constant="26" id="tqY-sK-14B"/>
                         </constraints>
                     </view>
@@ -714,4 +763,7 @@
     <resources>
         <image name="fed.png" width="978" height="499"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="RCV-tf-3qN"/>
+    </inferredMetricsTieBreakers>
 </document>
