--- a/Federal Taphouse/Base.lproj/Main.storyboard
+++ b/Federal Taphouse/Base.lproj/Main.storyboard
@@ -182,7 +182,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Picture2" translatesAutoresizingMaskIntoConstraints="NO" id="Ty9-IU-SM9">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Picture2" translatesAutoresizingMaskIntoConstraints="NO" id="Ty9-IU-SM9">
                                 <frame key="frameInset" width="600" height="600"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Please enter your email: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nru-Eq-A5c">
@@ -526,7 +526,7 @@
                                     <segue destination="f2Y-gN-9oE" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="9Hv-0O-FGi"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Logout" id="umS-8M-yDc">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Gallery" id="umS-8M-yDc">
                                 <rect key="frame" x="0.0" y="424" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="umS-8M-yDc" id="l8q-pu-1UY">
@@ -534,7 +534,18 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="qi3-2r-5fW" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="5as-rH-pb8"/>
+                                    <segue destination="Xk2-je-uBW" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="sXc-NV-pQ2"/>
+                                </connections>
+                            </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Logout" id="LV7-vA-QJe">
+                                <rect key="frame" x="0.0" y="468" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="LV7-vA-QJe" id="0Z4-yD-haV">
+                                    <frame key="frameInset" width="375" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="qi3-2r-5fW" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="4SK-oW-pE9"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -599,7 +610,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Picture4" translatesAutoresizingMaskIntoConstraints="NO" id="lKU-dq-3ng">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Picture4" translatesAutoresizingMaskIntoConstraints="NO" id="lKU-dq-3ng">
                                 <frame key="frameInset" width="600" height="600"/>
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone Number" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="kVR-Jr-4aP">
@@ -658,6 +669,51 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AYG-V5-Twa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1418" y="1559"/>
+        </scene>
+        <!--Gallery Collection View Controller-->
+        <scene sceneID="a8G-iQ-Tdn">
+            <objects>
+                <collectionViewController id="Xk2-je-uBW" customClass="GalleryCollectionViewController" customModule="Federal_Taphouse" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="nto-9d-Wft">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="3xd-se-f2M">
+                            <size key="itemSize" width="129" height="137"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="CT0-RF-JJo">
+                                <rect key="frame" x="0.0" y="0.0" width="129" height="137"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="129" height="137"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HcR-ZH-nj3">
+                                            <frame key="frameInset" width="129" height="145"/>
+                                        </imageView>
+                                    </subviews>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="HcR-ZH-nj3" firstAttribute="height" secondItem="CT0-RF-JJo" secondAttribute="height" id="ESr-Kf-ehF"/>
+                                    <constraint firstItem="HcR-ZH-nj3" firstAttribute="width" secondItem="CT0-RF-JJo" secondAttribute="width" id="JOf-ZM-JCv"/>
+                                    <constraint firstItem="HcR-ZH-nj3" firstAttribute="centerY" secondItem="CT0-RF-JJo" secondAttribute="centerY" id="OQh-YZ-jRX"/>
+                                    <constraint firstItem="HcR-ZH-nj3" firstAttribute="centerX" secondItem="CT0-RF-JJo" secondAttribute="centerX" id="eVA-fl-9aP"/>
+                                </constraints>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="Xk2-je-uBW" id="kzJ-lR-vne"/>
+                            <outlet property="delegate" destination="Xk2-je-uBW" id="k6z-Ip-FtZ"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Nn3-IO-z7C" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3468" y="1156.3718140929536"/>
         </scene>
         <!--Deals-->
         <scene sceneID="0ql-0G-Kmj">
